[package]
name = "ggetrs"
version = "0.1.87"
edition = "2021"
license = "MIT"
description = "Efficient querying of biological databases from the command line"
homepage = "https://noamteyssier.github.io/ggetrs/"
repository = "https://github.com/noamteyssier/ggetrs"
documentation = "https://docs.rs/ggetrs"
categories = ["science", "command-line-utilities"]
keywords = ["bioinformatics", "ensembl", "ncbi", "uniprot", "enrichr"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ggetrs"
crate-type = ["cdylib", "rlib"]

[features]
default = ["pyo3/extension-module"]

[dependencies]
anyhow = "1.0.64"
bitvec = "1.0.1"
bon = "3.0.2"
chrono = "0.4.22"
clap = { version = "4.0.18", features = ["derive"] }
clap_complete = "4.0.3"
ftp = "3.0.1"
futures = "0.3.24"
indicatif = "0.17.5"
mysql = { version = "25.0.1", default-features = false, features = [
    "minimal",
    "rustls-tls",
] }
# polars = { version = "0.43.1", default-features = false, features = ["json"] }
polars-core = { version = "0.44.2", default-features = false }
polars-io = { version = "0.44.2", default-features = false, features = [
    "json",
    "csv",
] }
pyo3 = { version = "0.23.1", features = ["extension-module", "anyhow"] }
regex = "1.6.0"
reqwest = { version = "0.12.5", default-features = false, features = [
    "json",
    "multipart",
    "blocking",
    "stream",
    "rustls-tls",
] }
serde = { version = "1.0.144", features = ["derive"] }
serde-xml-rs = "0.6.0"
serde_json = "1.0.85"
tokio = { version = "1.21.0", default-features = false }

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_inception = "allow"
module_name_repetitions = "allow"
missing_panics_doc = "allow"
missing_errors_doc = "allow"
cast_possible_truncation = "allow"
should_implement_trait = "allow"
float_cmp = "allow"
