[workspace]
resolver = "3"
members = [
    "ggetrs",
    "ggetrs-archs4",
    "ggetrs-blast",
    "ggetrs-chembl",
    "ggetrs-enrichr",
    "ggetrs-ensembl",
    "ggetrs-info",
    "ggetrs-ncbi",
    "ggetrs-pdb",
    "ggetrs-py",
    "ggetrs-seq",
    "ggetrs-string",
    "ggetrs-ucsc",
    "ggetrs-uniprot",
]

[workspace.dependencies]
ggetrs-archs4 = { version = "0.1.0", path = "./ggetrs-archs4" }
ggetrs-blast = { version = "0.1.0", path = "./ggetrs-blast" }
ggetrs-chembl = { version = "0.1.0", path = "./ggetrs-chembl" }
ggetrs-enrichr = { version = "0.1.0", path = "./ggetrs-enrichr" }
ggetrs-ensembl = { version = "0.1.0", path = "./ggetrs-ensembl" }
ggetrs-info = { version = "0.1.0", path = "./ggetrs-info" }
ggetrs-ncbi = { version = "0.1.0", path = "./ggetrs-ncbi" }
ggetrs-pdb = { version = "0.1.0", path = "./ggetrs-pdb" }
ggetrs-seq = { version = "0.1.0", path = "./ggetrs-seq" }
ggetrs-string = { version = "0.1.0", path = "./ggetrs-string" }
ggetrs-ucsc = { version = "0.1.0", path = "./ggetrs-ucsc" }
ggetrs-uniprot = { version = "0.1.0", path = "./ggetrs-uniprot" }
anyhow = "1"
bon = "3"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
reqwest = { version = "0.12.5", default-features = false, features = [
    "json",
    "multipart",
    "blocking",
    "stream",
    "rustls-tls",
] }
pyo3 = { version = "0.24.1", features = ["extension-module", "anyhow"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.21.0", default-features = false }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_inception = "allow"
module_name_repetitions = "allow"
missing_panics_doc = "allow"
missing_errors_doc = "allow"
cast_possible_truncation = "allow"
should_implement_trait = "allow"
float_cmp = "allow"
