[build-system]
requires = ["maturin>=1.1,<1.2"]
build-backend = "maturin"

[project]
name = "ggetrs"
description = "Biological querying and analysis"
readme = "README.md"
authors = [
  { name = "Noam Teyssier", email = "noam.teyssier@ucsf.edu" }
]
license = { file = "LICENSE" }
requires-python = ">=3.8"

keywords = [ "bioinformatics" ]

[project.urls]
Homepage = "https://noamteyssier.github.io/ggetrs"
Repository = "https://github.com/noamteyssier/ggetrs"
