[build-system]
requires = ["maturin>=1.1,<1.9"]
build-backend = "maturin"

[project]
name = "ggetrs"
description = "Biological querying and analysis"
readme = "README.md"
authors = [{ name = "Noam Teyssier", email = "noam.teyssier@arcinstitute.org" }]
license = { file = "LICENSE" }
requires-python = ">=3.8"
dynamic = ["version"]

keywords = ["bioinformatics"]
dependencies = [
    "requests>=2.32.3",
]

[project.urls]
Homepage = "https://noamteyssier.github.io/ggetrs"
Repository = "https://github.com/noamteyssier/ggetrs"

[tool.maturin]
manifest-path = "./ggetrs-py/Cargo.toml"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.9",
]
