[package]
name = "ggetrs-archs4"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
repository.homepage = true
repository.categories = true
repository.keywords = true
description = "ggetrs submodule for querying archs4"
documentation = "https://docs.rs/ggetrs-archs4"

[dependencies]
anyhow = { workspace = true }
pyo3 = { workspace = true, optional = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[features]
default = []
python = ["dep:pyo3"]
