[package]
name = "ggetrs-blast"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true
description = "ggetrs submodule for querying BLAST"
documentation = "https://docs.rs/ggetrs-blast"

[dependencies]
anyhow = { workspace = true }
pyo3 = { workspace = true, optional = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = "0.4"
regex = "1"
serde-xml-rs = "0.7"

[features]
default = []
python = ["dep:pyo3"]
