[package]
name = "ggetrs-chembl"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
repository.homepage = true
repository.categories = true
repository.keywords = true
description = "ggetrs submodule for querying CHEMBL"
documentation = "https://docs.rs/ggetrs-chembl"

[dependencies]
anyhow = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
