[package]
name = "ggetrs-ensembl"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
pyo3 = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
mysql = { version = "26", default-features = false, features = [
    "minimal",
    "rustls-tls",
] }
ftp = "3"
indicatif = "0.17"
