[package]
name = "ggetrs-ensembl"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true
description = "ggetrs submodule for querying ENSEMBL"
documentation = "https://docs.rs/ggetrs-ensembl"

[dependencies]
anyhow = { workspace = true }
futures = { workspace = true }
pyo3 = { workspace = true, optional = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
mysql = { version = "26", default-features = false, features = [
    "minimal",
    "rustls-tls",
] }
ftp = "3"
indicatif = "0.17"

[features]
default = []
python = ["dep:pyo3"]
