[package]
name = "ggetrs-info"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
repository.homepage = true
repository.categories = true
repository.keywords = true
description = "ggetrs submodule for querying information about genes"
documentation = "https://docs.rs/ggetrs-info"

[dependencies]
anyhow = { workspace = true }
ggetrs-ensembl = { workspace = true }
ggetrs-ncbi = { workspace = true }
ggetrs-uniprot = { workspace = true }
pyo3 = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }

[features]
python = ["dep:pyo3"]
