[package]
name = "ggetrs-pdb"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
repository.homepage = true
repository.categories = true
repository.keywords = true
description = "ggetrs submodule for querying PDB"
documentation = "https://docs.rs/ggetrs-pdb"

[dependencies]
anyhow = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
