[package]
name = "ggetrs-py"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true
description = "ggetrs submodule for interacting with ggetrs via python"
documentation = "https://docs.rs/ggetrs-py"

[lib]
name = "ggetrs"
crate-type = ["cdylib"]

[dependencies]
ggetrs-archs4 = { workspace = true, features = ["python"] }
ggetrs-blast = { workspace = true, features = ["python"] }
ggetrs-enrichr = { workspace = true, features = ["python"] }
ggetrs-ensembl = { workspace = true, features = ["python"] }
ggetrs-info = { workspace = true, features = ["python"] }
ggetrs-seq = { workspace = true, features = ["python"] }
ggetrs-ucsc = { workspace = true, features = ["python"] }
ggetrs-uniprot = { workspace = true, features = ["python"] }
pyo3 = { workspace = true }

[lints]
workspace = true
