[package]
name = "ggetrs-seq"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true
description = "ggetrs submodule for querying sequence information"
documentation = "https://docs.rs/ggetrs-seq"

[dependencies]
anyhow = { workspace = true }
ggetrs-ensembl = { workspace = true }
ggetrs-uniprot = { workspace = true }
pyo3 = { workspace = true, optional = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[features]
python = ["dep:pyo3"]
