[package]
name = "ggetrs-string"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
bon = { workspace = true }
clap = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
polars-core = { version = "0.46", default-features = false }
polars-io = { version = "0.46", default-features = false, features = [
    "json",
    "csv",
] }
