[package]
name = "ggetrs-string"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true
description = "ggetrs submodule for querying STRING"
documentation = "https://docs.rs/ggetrs-string"

[dependencies]
anyhow = { workspace = true }
bon = { workspace = true }
clap = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
polars-core = { version = "0.46", default-features = false }
polars-io = { version = "0.48", default-features = false, features = [
    "json",
    "csv",
] }
