[package]
name = "ggetrs-ucsc"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true
description = "ggetrs submodule for querying UCSC"
documentation = "https://docs.rs/ggetrs-ucsc"

[dependencies]
anyhow = { workspace = true }
pyo3 = { workspace = true, optional = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[features]
default = []
python = ["dep:pyo3"]
