[package]
name = "ggetrs-uniprot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
futures = { workspace = true }
pyo3 = { workspace = true, optional = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[features]
default = []
python = ["dep:pyo3"]
